# rtow

./: .gitignore  CMakeLists.txt  compile_commands.json
includes/: math.hpp  ppm_image.hpp
src/: main.cpp
src/core/: ppm_image.cpp
